@@ -1,4 +1,5 @@
 - simplify Int and Float implementations
+- improve Boolean error-checking
 
 0.38 2019-12-08
 - error objects now stringify - thanks @jjn1056 for idea
